updated to latest main version
- translated some new things
- translated all new ui messages

--- a/Translations/German/text-eventStoryTitle-change.xml
+++ b/Translations/German/text-eventStoryTitle-change.xml
@@ -2350,8 +2350,8 @@
 		<Translation>Family Games</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_EVENTSTORY_START_LAW_TITLE</zType>
-		<Translation>Change Law</Translation>
+		<zType>TEXT_EVENTSTORY_FAMILY_LAW_TITLE</zType>
+		<Translation>Ändere Gesetz</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_ESTABLISH_THEOLOGY_TITLE</zType>
