--- a/Translations/German/text-unit-change.xml
+++ b/Translations/German/text-unit-change.xml
@@ -29,7 +29,7 @@
 		<Translation>Miliz~eine Miliz~Milizen</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_UNIT_LEVY</zType>
+		<zType>TEXT_UNIT_CONSCRIPT</zType>
 		<Translation>Rekrut~einen Rekrut~Rekruten</Translation>
 	</Entry>
 	<Entry>
